# shmatrix

./: CHANGELOG.md  README.md  cabal.project  shmatrix.cabal  trident.cabal
bench/: bench.hs
src/Numeric/: Static.hs
src/Numeric/Static/: Tensor.hs
src/Numeric/Static/BLAS/: Tensor.hs
src/Numeric/Static/BLAS/Internal/: OpenBLAS.hs
src/Numeric/Static/Core/: Memory.hs  Shape.hs  Types.hs
src/Numeric/Static/Internal/: Memory.hs  Shape.hs  Types.hs
src/Trident/: Static.hs
src/Trident/Core/: Memory.hs  Shape.hs  Types.hs
src/Trident/Graph/: Computation.hs  Operations.hs
src/Trident/Internal/: OpenBLAS.hs
src/Trident/Static/: BLAS.hs  Tensor.hs
src/Trident/Static/BLAS/: Tensor.hs
src/Trident/Static/BLAS/Internal/: OpenBLAS.hs
test/: test.hs
test/Test/Numeric/Static/: BLAS.hs
test/Test/Trident/Static/: BLAS.hs
test/Test/Utils/: Comparable.hs  Hedgehog.hs
test/Tests/Numeric/Static/: BLAS.hs
