cabal-version:       >=1.10

name:                trident
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Theo Charalambous
maintainer:          t.e.charalambous@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Trident.Static
    Trident.Static.Tensor
    Trident.Core.Shape
    Trident.Core.Memory
    Trident.Static.BLAS
    Trident.Internal.OpenBLAS
  -- other-modules:
  -- other-extensions:
  build-depends:       
      base        >=4.14 && <4.15
    , constraints
    , singletons  >= 2.6
    , ghc-typelits-extra
    , ghc-typelits-knownnat >=0.7.4
    , hedgehog
    , mwc-random >= 0.15.0.1
    , deepseq >= 1.4.4.0
  hs-source-dirs:
      src
  ghc-options: -O2
  default-language:    Haskell2010
  if impl(ghc >= 8.6)
    default-extensions: NoStarIsType

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
    Test.Trident.Static.BLAS
    Test.Utils.Hedgehog
  ghc-options: -Wall -threaded -O2
  hs-source-dirs:
    test
  build-depends:   
      base    
    , trident
    , hedgehog
    , constraints
    , ghc-typelits-knownnat >=0.7.4
    , hmatrix
  

benchmark bench
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs:
      bench
  ghc-options: -Wall -threaded -O2
  build-depends:
      base        >=4.14 && <4.15
    , constraints
    , singletons  >= 2.6
    , ghc-typelits-extra
    , ghc-typelits-knownnat >=0.7.4
    , hedgehog
    , mwc-random            >=0.15.0.1
    , hmatrix               >=0.20.1
    , trident
    , criterion
    , massiv
  default-language: Haskell2010

